--- a/style-login.css
+++ b/style-login.css
@@ -22,6 +22,7 @@ header{
     align-items: center;/*Alinhamento horizontal*/
     padding: 30px;
     margin-top: 3%;
+    min-height: 450px;
 }
 
 .imagem-login{
@@ -75,10 +76,17 @@ footer{
     min-height: 15em;
     /* background-color: aqua; */
     width: 100%;
-    height: 50px;
+    /* height: 5px; */
     margin: 0 auto;
     position: fixed;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
+
+footer > p{
+    padding-bottom: 30px;
+ }
 input{
     background-color: #9f9e9e;
     border:none;
@@ -97,7 +105,8 @@ input::placeholder{
     #principal{
         display: grid;
         grid-template-columns: 1fr;
-        width: 50vw;
+        margin: 0 auto;
+        padding-bottom: 30px;
     }
     .login-text{
         text-align: center;
