--- a/style-login.css
+++ b/style-login.css
@@ -24,13 +24,22 @@ header{
     margin-top: 3%;
     min-height: 450px;
 }
-
+/* 
 .imagem-login{
     margin: 0 auto;
     display: flex;
+    /* background-color: #ff4f63; */
+    /* box-shadow: -1px 1px 3px rgba(17, 17, 17, 0.616);
+    border-radius: 300px;
 }
-.imagem-login > img{
-    max-width: 600px;
+    */
+
+.imagem-login > picture > img{
+    max-width: 100%; 
+    margin: 0 auto;
+    display: flex;
+    padding-bottom: 3%;
+
 }
 .login-text{
     text-align: center;
@@ -119,6 +128,13 @@ input::placeholder{
     header{
     min-height: 10em;
     /* background-color: aqua; */
-}
+    }
+    .imagem-login > picture > img{
+        max-width: 50%; 
+        margin: 0 auto;
+        display: flex;
+        padding-bottom: 3%;
+    
+    }
 
 }
