--- a/style-login.css
+++ b/style-login.css
@@ -13,6 +13,7 @@ header{
     min-height: 15em;
     /* background-color: aqua; */
     overflow-x:hidden;
+    overflow-y:hidden;
 }
 
 #principal{
