--- a/Principal/style.principal.css
+++ b/Principal/style.principal.css
@@ -3,6 +3,10 @@
     --black:rgba(14, 12, 12, 0.596);
     --white:white;
 }
+#logo{
+    max-width: 5rem;
+   
+}
 
 body,html, ul,li,p{
     margin: 0px;
@@ -26,7 +30,7 @@ a{
     align-items: center;
     box-sizing: border-box;
     height: 70px;
-    padding: 1rem;
+    /* padding: 1rem; */
 }
 .menu{
     display: flex;
