--- a/Cadastro peças/style-cadastro-pecas.css
+++ b/Cadastro peças/style-cadastro-pecas.css
@@ -25,7 +25,7 @@ header{
     align-items: center;/*Alinhamento horizontal*/
     padding: 30px;
     margin-top: 3%;
-    min-height: 450px;
+    min-height: 0 auto;
 }
 /* 
 .imagem-login{
