--- a/Cadastro peças/style-cadastro-pecas.css
+++ b/Cadastro peças/style-cadastro-pecas.css
@@ -90,7 +90,7 @@ a{
 }
 footer{
     min-height: 15em;
-    /* background-color: aqua; */
+    background-color: aqua;
     width: 100%;
     /* height: 5px; */
     margin: 0 auto;
