--- a/Cadastro peças/style-cadastro-pecas.css
+++ b/Cadastro peças/style-cadastro-pecas.css
@@ -6,7 +6,7 @@
 body{
     height: 90%;
     overflow-x:hidden;
-    overflow-y:hidden;
+    /* overflow-y:hidden; */
 }
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap');
