--- a/Cadastro peças/style-cadastro-pecas.css
+++ b/Cadastro peças/style-cadastro-pecas.css
@@ -6,7 +6,7 @@
 body{
     height: 90%;
     overflow-x:hidden;
-    /* overflow-y:hidden; */
+    overflow-y:hidden;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap');
@@ -157,6 +157,17 @@ input::placeholder{
         font-size: 1.0em;
 
       
+    }
+    footer{
+        /* max-height: 1em; */
+        background-color: aqua;
+        width: 100%;
+        /* height: 5px; */
+        margin: 0 auto;
+        position: fixed;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
     }
 
 }
