--- a/Cadastro peças/style-cadastro-pecas.css
+++ b/Cadastro peças/style-cadastro-pecas.css
@@ -89,7 +89,7 @@ a{
 }
 footer{
     min-height: 15em;
-    background-color: aqua;
+    /* background-color: aqua; */
     width: 100%;
     /* height: 5px; */
     margin: 0 auto;
@@ -160,7 +160,7 @@ input::placeholder{
     }
     footer{
         /* max-height: 1em; */
-        background-color: aqua;
+        /* background-color: aqua; */
         width: 100%;
         /* height: 5px; */
         margin: 0 auto;
@@ -168,6 +168,11 @@ input::placeholder{
         display: inline-flex;
         align-items: center;
         justify-content: center;
+    }
+    @media (max-width:500px){
+        .imagem-login > picture > img{
+            display: none;
+        }
     }
 
 }
