--- a/Principal/style.principal.css
+++ b/Principal/style.principal.css
@@ -15,7 +15,7 @@ body,html, ul,li,p{
     font-size: 1.2rem;
     font-family: 'Times New Roman', Times, serif;
 }
-a{
+ul > li > a{
     text-decoration: none;
     color:var(--white) ;
 }
